Force: update IoC.